	 (fuse-utils_0_6_2-branch).
20040212 TAG: fuse-utils_0_6_2 (fuse-utils_0_6_2-branch).
20040223 Merge changes from fuse-utils_0_6_2 to HEAD.
20040223 TAG: fuse-utils_0_6_2-merge-1
20040616 acconfig.h,configure.in: remove use of acconfig.h.
20040616 .cvsignore,createhdf.c,Makefile.am: add createhdf utility for
	 creating empty .hdf files.
20040620 README,autogen.sh: add script to do the autotools invocation.
20040626 man/{Makefile.am,createhdf.1,fuse-utils.1}: add createhdf
	 manpage.
20040709 configure.in: bump version number to 0.7.0pre1.
20040709 TAG: fuse-utils_0_7_0pre1.
20040715 README,man/{createhdf.1,fuse-utils.1,listbasic.1,rzxcheck.1,
	 rzxdump.1,rzxtool.1,scl2trd.1,snap2tzx.1,snapconv.1,tapeconv.1,
	 tzxlist.1}; doc updates for 0.7.0 release.
20040715 configure.in: Use libtool to link fuse-utils
20040715 autogen.sh: copy auxiliary files rather than linking them.
20040715 .cvsignore: ignore libtool generated files.
20040716 configure.in: bump veersion umber to 0.7.0.
20040806 snapconv.c,man/snapconv.1: Add -c and -n options to snapconv that
         allow the writing of uncompressed and completely compressed snapshots.
20040906 rzxcheck.c: use new RZX signature API.
20040909 rzxtool.c: fix up so it at least compiles and has some
	 functionality.
20040920 rzxcheck.c: remove small memory leak.
20041031 .cvsignore: ignore stamp-h1.
20050209 snapconv.c: correct filename in error message if target format
	 couldn't be identified.
20050310 man/createhdf.1: fix small typo (access -> accesses).
20050719 tzxlist.c,man/tzxlist.1: handle all supported tape types (Fred).
20051031 .cvsignore,Makefile.am,createhdf.c,ide.[ch],raw2hdf.c,
	 man/{Makefile.am,fuse-utils.1,raw2hdf.1}: add raw2hdf utility
	 (Matthew Westcott).
20051224 autogen.sh: remove --copy on automake invocation.
20060614 createhdf.c: reengineer to use truncate() directly when writing
         sparse files (saves a block on disk). Fix double declaration of
	 buffer (thanks, Josetxu Malanda).