@@ -68,6 +68,13 @@ disables this. (There's nothing `magic' about this: if data is written
 to the file, it will take up space just like any other data; it's only
 empty space which is synthesised by the operating system).
 .TP
+.I -v version
+specifies the version of .hdf image to be created. Valid values are
+.RI ` 1.0 '
+for a version 1.0 file and
+.RI ` 1.1 '
+for a version 1.1 file. Defaults to creating version 1.1 files.
+.TP
 .I cylinders
 specifies the number of cylinders in the image.
 .TP
