@@ -49,6 +49,13 @@ image in .hdf format for use with Sinclair ZX Spectrum emulators.
 .\"
 .SH OPTIONS
 .TP
+.I -v version
+specifies the version of .hdf image to be created. Valid values are
+.RI ` 1.0 '
+for a version 1.0 file and
+.RI ` 1.1 '
+for a version 1.1 file. Defaults to creating version 1.1 files.
+.TP
 .I rawfile
 specifies a raw data file (or block device corresponding to an actual
 disk) to be converted.
