@@ -126,3 +126,6 @@
 20060614 createhdf.c: reengineer to use truncate() directly when writing
          sparse files (saves a block on disk). Fix double declaration of
 	 buffer (thanks, Josetxu Malanda).
+20060630 createhdf.c,ide.[ch],raw2hdf.c,man/{createhdf.1,raw2hdf.1}: allow
+	 creation of v1.1 .hdf images. Fix a bug introduced in the last
+	 change which made sparse files short by <header length> bytes.
